name:                hnuts
version:             1.0.0.0
synopsis:            Automatic gradient-based sampling.
homepage:            github.com/jtobin/hnuts
license:             BSD3
license-file:        LICENSE
author:              Jared Tobin
maintainer:          jared@jtobin.ca
category:            Math
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >= 1.10

library
  exposed-modules:     Numeric.MCMC.NUTS, 
                       Numeric.MCMC.NUTS.Examples

  other-extensions:    ScopedTypeVariables

  build-depends:       base >= 4.6,
                       monad-loops >= 0.4,
                       primitive >= 0.5, 
                       mwc-random >= 0.12,
                       statistics >= 0.10,
                       ad >= 3.4 

  hs-source-dirs:      src

  default-language:    Haskell2010

