name:                hnuts
version:             1.0.0.0
synopsis:            Automatic gradient-based sampling.
homepage:            github.com/jtobin/hnuts
license:             BSD3
license-file:        LICENSE
author:              Jared Tobin
maintainer:          jared@jtobin.ca
category:            Math
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >= 1.18

library
  exposed-modules:
      Numeric.MCMC.NUTS

  other-extensions:
    ScopedTypeVariables

  build-depends:
      base
    , monad-loops
    , primitive
    , mwc-random
    , statistics

  hs-source-dirs:
    src

  default-language:
    Haskell2010

